<resources>
    <string name="app_name">Youtu_android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="return_page">返回上一页</string>
    <string name="input_message">输入你想输入的信息</string>
    <string name="go_page">跳转页面</string>
    <string name="home_fragment">首页fragment</string>
    <string name="detail_fragment">详情页</string>
    <string name="title_activity_view_modle">ViewModleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="but_add">+1</string>
    <string name="but_cut">-1</string>
    <string name="item_b">ItemB</string>
    <string name="item_a">ItemA</string>
    <string name="add_2">+2</string>
    <string name="insert_data">添加数据</string>
    <string name="delete_data">删除数据</string>
    <string name="delete_all">删除所有数据</string>
    <string name="select_all_data">查询数据</string>
    <string name="update_data">刷新数据</string>
    <string name="data_set">生成数据</string>
    <string name="data_clear">clear数据</string>
</resources>
